--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -163,6 +163,7 @@
     <add key="GetListaCajaGralEstacion" value="api/ventas/buscar/listacajageneralestacion/" />
     <add key="PutLiquidarCajaGral" value="api/ventas/Modifica/liquidarcajageneral" />
     <add key="PutLiquidarCajaGralEst" value="api/ventas/Modifica/liquidarcajageneralest" />
+    <add key="PutListaMovGas" value="api/ventas/buscar/listamovimientosgas" />
     <!-- Ventas -->
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
