--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -12,8 +12,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <uses-feature
         android:name="android.hardware.camera.any"
@@ -21,7 +21,9 @@
     <uses-feature
         android:name="android.hardware.camera.autofocus"
         android:required="true" />
-    <uses-feature android:name="android.hardware.camera" android:required="true" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -30,43 +32,62 @@
         android:largeHeap="true"
         android:roundIcon="@mipmap/ic_sagas_launcher_round"
         android:supportsRtl="true"
-
         android:theme="@style/SagasTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".Activity.MainActivity" android:theme="@style/SagasTheme" android:screenOrientation="portrait">
+
+        <activity android:name=".Activity.SplashActivity"
+            android:theme="@style/SagasTheme"
+            android:screenOrientation="portrait"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".Activity.MainActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/SagasTheme">
+
+        </activity>
         <activity
             android:name=".Activity.MenuActivity"
-            android:label="@string/activity_menu" android:theme="@style/AppEnter" />
+            android:label="@string/activity_menu"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.IniciarDescargaActivity"
-            android:label="@string/title_iniciar_descarga" android:theme="@style/AppEnter" />
+            android:label="@string/title_iniciar_descarga"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.FinalizarDescargaActivity"
-            android:label="@string/title_finalizar_descarga" android:theme="@style/AppEnter"/>
+            android:label="@string/title_finalizar_descarga"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.CapturaPorcentajeActivity"
-            android:label="@string/activity_capturar_procentaje" android:theme="@style/AppEnter"/>
+            android:label="@string/activity_capturar_procentaje"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.RegistrarPapeletaActivity"
-            android:label="@string/title_registro_papeleta" android:theme="@style/AppEnter" />
+            android:label="@string/title_registro_papeleta"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.CameraPapeletaActivity"
-            android:label="@string/title_registro_papeleta" android:theme="@style/AppEnter"/>
+            android:label="@string/title_registro_papeleta"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.VistaOrdenCompraActivity"
-            android:label="@string/title_orden_compra" android:theme="@style/AppEnter"/>
+            android:label="@string/title_orden_compra"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.CameraDescargaActivity"
-            android:label="@string/title_proceso_descarga" android:theme="@style/AppEnter"/>
+            android:label="@string/title_proceso_descarga"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.SubirImagenesActivity"
-            android:label="@string/title_proceso_descarga" android:theme="@style/AppEnter"/>
+            android:label="@string/title_proceso_descarga"
+            android:theme="@style/AppEnter" />
 
         <!--
      Set custom default icon. This is used when no icon is set for incoming notification messages.
@@ -102,101 +123,132 @@
 
         <activity
             android:name=".Activity.LecturaDatosActivity"
-            android:label="@string/toma_de_lectura" android:theme="@style/AppEnter"/>
+            android:label="@string/toma_de_lectura"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.LecturaP5000Activity"
-            android:label="@string/toma_de_lectura" android:theme="@style/AppEnter"/>
+            android:label="@string/toma_de_lectura"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.CameraLecturaActivity"
-            android:label="@string/toma_de_lectura" android:theme="@style/AppEnter"/>
+            android:label="@string/toma_de_lectura"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.LecturaPipaActivity"
-            android:label="@string/Pipa" android:theme="@style/AppEnter"/>
+            android:label="@string/Pipa"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.LecturaAlmacenActivity"
-            android:label="@string/Almacen" android:theme="@style/AppEnter"/>
+            android:label="@string/Almacen"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.LecturaCamionetaActivity"
-            android:label="@string/Camioneta" android:theme="@style/AppEnter"/>
+            android:label="@string/Camioneta"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.ConfiguracionCamionetaActivity"
-            android:label="@string/Camioneta" android:theme="@style/AppEnter"/>
+            android:label="@string/Camioneta"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.EnviarDartosActivity"
-            android:label="@string/Camioneta" android:theme="@style/AppEnter"/>
+            android:label="@string/Camioneta"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.ReporteActivity"
-            android:label="@string/Reporte" android:theme="@style/AppEnter"/>
+            android:label="@string/Reporte"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.VerReporteActivity"
-            android:label="@string/Reporte" android:theme="@style/AppEnter"/>
+            android:label="@string/Reporte"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.RecargaCamionetaActivity"
-            android:label="@string/Recarga_camioneta" android:theme="@style/AppEnter"/>
+            android:label="@string/Recarga_camioneta"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.RecargaEstacionCarburacionActivity"
-            android:label="@string/Recarga_de_estacion" android:theme="@style/AppEnter"/>
+            android:label="@string/Recarga_de_estacion"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.RecargaPipaActivity"
-            android:label="@string/Recarga_pipa" android:theme="@style/AppEnter"/>
+            android:label="@string/Recarga_pipa"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.AutoconsumoEstacionActivity"
-            android:label="@string/Autoconsumo_estacion" android:theme="@style/AppEnter"/>
+            android:label="@string/Autoconsumo_estacion"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.AutoconsumoInventarioActivity"
-            android:label="@string/Autoconsumo_inventario" android:theme="@style/AppEnter"/>
+            android:label="@string/Autoconsumo_inventario"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.AutoconsumoPipaActivity"
-            android:label="@string/Autoconsumo" android:theme="@style/AppEnter"/>
+            android:label="@string/Autoconsumo"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.TraspasoEstacionActivity"
-            android:label="@string/Traspaso" android:theme="@style/AppEnter"/>
+            android:label="@string/Traspaso"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.TraspasoPipaActivity"
-            android:label="@string/Traspaso" android:theme="@style/AppEnter"/>
+            android:label="@string/Traspaso"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.CalibracionEstacionActivity"
-            android:label="@string/Calibracion" android:theme="@style/AppEnter"/>
+            android:label="@string/Calibracion"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.CalibracionPipaActivity"
-            android:label="@string/Calibracion" android:theme="@style/AppEnter"/>
+            android:label="@string/Calibracion"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.PorcentajeCalibracionActivity"
-            android:label="@string/Calibracion" android:theme="@style/AppEnter"/>
+            android:label="@string/Calibracion"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.AnticipoEstacionCarburacionActivity"
-            android:label="@string/Anticipo" android:theme="@style/AppEnter"/>
+            android:label="@string/Anticipo"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.AnticipoTablaActivity"
-            android:label="@string/Anticipo" android:theme="@style/AppEnter"/>
+            android:label="@string/Anticipo"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.PuntoVentaSolicitarActivity"
-            android:label="@string/Punto_de_venta" android:theme="@style/AppEnter"/>
+            android:label="@string/Punto_de_venta"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.RegistroClienteActivity"
-            android:label="@string/Punto_de_venta" android:theme="@style/AppEnter"/>
+            android:label="@string/Punto_de_venta"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.BuscarClienteActivity"
-            android:label="@string/Punto_de_venta" android:theme="@style/AppEnter"/>
+            android:label="@string/Punto_de_venta"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.VentaGasActivity"
             android:configChanges="orientation"
             android:label="@string/Punto_de_venta"
-            android:screenOrientation="portrait" android:theme="@style/AppEnter"/>
+            android:screenOrientation="portrait"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.PuntoVentaGasListaActivity"
             android:configChanges="orientation"
             android:label="@string/Punto_de_venta"
-            android:screenOrientation="portrait" android:theme="@style/AppEnter"/>
+            android:screenOrientation="portrait"
+            android:theme="@style/AppEnter" />
         <activity
             android:name=".Activity.PuntoVentaPagarActivity"
             android:configChanges="orientation"
             android:label="@string/Punto_de_venta"
-            android:screenOrientation="portrait" android:theme="@style/AppEnter"/>
-        <activity android:name=".Activity.PuntoVentaOtrosActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppEnter" />
+        <activity
+            android:name=".Activity.PuntoVentaOtrosActivity"
             android:configChanges="orientation"
             android:label="@string/Punto_de_venta"
-            android:screenOrientation="portrait" android:theme="@style/AppEnter"/>
+            android:screenOrientation="portrait"
+            android:theme="@style/AppEnter" />
     </application>
 
 </manifest>
