JOTM-13/11/2018 Actualización de servicios mobile
* Agregar fecha aplicación 
*Agregar cambio en el menú

--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
@@ -85,8 +85,9 @@
     <add key="AppCalibracionEstacionCarbFinal" value="Calibración - Unidad de Gas|Estación Carb.(Final)|ic_calibracion" />
     <add key="AppCalibracionPipaInicial" value="Calibración - Unidad de Gas|Pipa(Inicial)|ic_calibracion" />
     <add key="AppCalibracionPipaFinal" value="Calibración - Unidad de Gas|Pipa(Final)|ic_calibracion" />
-    <add key="AppCalibracionCamionetaCilindroInicial" value="Calibración - Unidad de Gas|Camioneta (Inicial)|ic_calibracion" />
-    <add key="AppCalibracionCamionetaCilindroFinal" value="Calibración - Unidad de Gas|Camioneta (Inicial)|ic_calibracion" />
+    <add key="AppCalibracionCamionetaCilindro" value="Calibración - Unidad de Gas|Cilindro|ic_calibracion" />
+    <!--<add key="AppCalibracionCamionetaCilindroInicial" value="Calibración - Unidad de Gas|Camioneta (Inicial)|ic_calibracion" />
+    <add key="AppCalibracionCamionetaCilindroFinal" value="Calibración - Unidad de Gas|Camioneta (Inicial)|ic_calibracion" />-->
     <add key="AppRecargaEstacionCarbInicial" value="Recarga - Gas|Estación Cab. (Inicial)|ic_recarga" />
     <add key="AppRecargaEstacionCarbFinal" value="Recarga - Gas|Estación Cab. (Final)|ic_recarga" />
     <add key="AppRecargaPipaInicial" value="Recarga - Gas|Pipa (Inicial)|ic_recarga" />
