CJAL-13/11/2018- Termino desarrollo reportes pipa-cilindro

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -371,6 +371,7 @@
     <Compile Include="Models\Seguridad\UsuarioRolModel.cs" />
     <Compile Include="Models\Ventas\CajaGeneralCamionetaModel.cs" />
     <Compile Include="Models\Ventas\CajaGeneralModel.cs" />
+    <Compile Include="Models\Ventas\MovimientosGasCilindros.cs" />
     <Compile Include="Models\Ventas\MovimientosGasModel.cs" />
     <Compile Include="Models\Ventas\VentaCorteAnticipoModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
