--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -164,6 +164,7 @@
     <add key="PutLiquidarCajaGral" value="api/ventas/Modifica/liquidarcajageneral" />
     <add key="PutLiquidarCajaGralEst" value="api/ventas/Modifica/liquidarcajageneralest" />
     <add key="PutListaMovGas" value="api/ventas/buscar/listamovimientosgas" />
+    <add key="PutListaMovGasCilindros" value="api/ventas/buscar/listamovimientosgascilindros" />
     <!-- Ventas -->
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
