--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -277,6 +277,7 @@
     <Compile Include="Models\Almacen\AlmacenDTO.cs" />
     <Compile Include="Models\Almacen\AlmacenSalidaDTO.cs" />
     <Compile Include="Models\Almacen\RegistroDTO.cs" />
+    <Compile Include="Models\Almacen\RemanenteDTO.cs" />
     <Compile Include="Models\Almacen\RequisicionSalidaDTO.cs" />
     <Compile Include="Models\Catalogos\BancoDTO.cs" />
     <Compile Include="Models\Catalogos\CatalogoRespuestaDTO.cs" />
