--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -81,6 +81,8 @@
     <Compile Include="DTOs\Almacen\InventarioAnteriorDto.cs" />
     <Compile Include="DTOs\Almacen\RegistroDTO.cs" />
     <Compile Include="DTOs\Almacen\RemaDto.cs" />
+    <Compile Include="DTOs\Almacen\RemanenteGeneralDTO.cs" />
+    <Compile Include="DTOs\Almacen\RemanentePuntoVentaDTO.cs" />
     <Compile Include="DTOs\Catalogo\PrecioVentaEstatusDTO.cs" />
     <Compile Include="AdaptadoresDTO\Catalogo\PrecioVentaGasAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Catalogo\ProductoAdapter.cs" />
