JSA-Avance ajustes

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -146,6 +146,7 @@
     <add key="PostGenerarPago" value="api/compras/guardar/pago" />
     <add key="GetListaPagos" value="api/compras/buscar/pagos/" />
     <add key="PutAutorizarProductoOordenCompra" value="api/compras/actualiza/productos/ordencompra" />
+    <add key="PutSolicitarPago" value="api/compras/solictud/pago/mercancia" />
     <!--Compras-->
     <!-- Almacen -->
     <add key="PostGuardarEntradas" value="api/almacen/entrada/producto" />
