--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
@@ -11,13 +11,13 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-DS.MainModule-20180716112358.mdf;Initial Catalog=aspnet-DS.MainModule-20180716112358;Integrated Security=True" providerName="System.Data.SqlClient" />
     <!--Jimmy-->
-    <!--<add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NEOTECK014F-PC;initial catalog=Sagas.MainModule;Integrated Security=SSPI;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NEOTECK014F-PC;initial catalog=Sagas.MainModule;Integrated Security=SSPI;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <!--Kevin-->
     <!--<add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NEOTECK7148-PC;initial catalog=Sagas.MainModule;Integrated Security=SSPI;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <!--Celina-->
     <!--<add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.13;initial catalog=Sagas.MainModule;user id=sa;password=Nts.682;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <!--Jorge-->
-    <add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.13;initial catalog=Sagas.MainModule;user id=sa;password=Nts.682;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.13;initial catalog=Sagas.MainModule;user id=sa;password=Nts.682;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <appSettings>
     <!--URL del WebApp-->
