CJAL-04/12/2018- Bugs flujo complemento gas

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -147,6 +147,7 @@
     <add key="GetListaPagos" value="api/compras/buscar/pagos/" />
     <add key="PutAutorizarProductoOordenCompra" value="api/compras/actualiza/productos/ordencompra" />
     <add key="PutSolicitarPago" value="api/compras/solictud/pago/mercancia" />
+    <add key="PutGuardarDatosPapeleta" value="api/compras/guardar/datos/papeleta" />
     <!--Compras-->
     <!-- Almacen -->
     <add key="PostGuardarEntradas" value="api/almacen/entrada/producto" />
