JSA-Avance ajustes OrdenCompraComplementoGas

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -148,6 +148,7 @@
     <add key="PutAutorizarProductoOordenCompra" value="api/compras/actualiza/productos/ordencompra" />
     <add key="PutSolicitarPago" value="api/compras/solictud/pago/mercancia" />
     <add key="PutGuardarDatosPapeleta" value="api/compras/guardar/datos/papeleta" />
+    <add key="PutDatosOrdenCompraExpedidor" value="api/compras/actualiza/ordencompra/datosexpedidor" />
     <!--Compras-->
     <!-- Almacen -->
     <add key="PostGuardarEntradas" value="api/almacen/entrada/producto" />
