CJAL-04/12/2018- cambios complemento pago porteador

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -144,6 +144,7 @@
     <add key="GetOrdenCompraComplementoGas" value="api/compras/buscar/ordencompra/complemento/gas/" />
     <add key="PutConfirmarPago" value="api/compras/guardar/confirmacionpago" />
     <add key="PostGenerarPago" value="api/compras/guardar/pago" />
+    <add key="PostGuardarPagoPorteador" value="api/compras/guardar/pago/porteador" />
     <add key="GetListaPagos" value="api/compras/buscar/pagos/" />
     <add key="PutAutorizarProductoOordenCompra" value="api/compras/actualiza/productos/ordencompra" />
     <add key="PutSolicitarPago" value="api/compras/solictud/pago/mercancia" />
