JOTM-04/11/2018-Agrega actualización venta corte caja
agrega actualización cote de cajas para actualizar sus ventas correspondientes

--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -107,6 +107,7 @@
     <Compile Include="DTOs\Mobile\CamionetaDto.cs" />
     <Compile Include="DTOs\Mobile\CategoriaDto.cs" />
     <Compile Include="DTOs\Mobile\CorteDto.cs" />
+    <Compile Include="DTOs\Mobile\Cortes\VentasCorteDTO.cs" />
     <Compile Include="DTOs\Mobile\DatosAnticiposCorteDto.cs" />
     <Compile Include="DTOs\Mobile\DatosAutoconsumoDto.cs" />
     <Compile Include="DTOs\Mobile\DatosCalibracionDto.cs" />
