--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -148,6 +148,7 @@
     <add key="GetListaPagos" value="api/compras/buscar/pagos/" />
     <add key="PutAutorizarProductoOordenCompra" value="api/compras/actualiza/productos/ordencompra" />
     <add key="PutSolicitarPago" value="api/compras/solictud/pago/mercancia" />
+    <add key="PutSolicitarPagoPorteador" value="api/compras/solictud/pago/porteador" />
     <add key="PutGuardarDatosPapeleta" value="api/compras/guardar/datos/papeleta" />
     <!--Compras-->
     <!-- Almacen -->
