JOTM-10/12/2018-Cambios de obtención de punto venta
* Crea servicio para obtener le punto de venta asignado para el tiket de venta

--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -119,6 +119,7 @@
     <Compile Include="DTOs\Mobile\EstacionesDto.cs" />
     <Compile Include="DTOs\Mobile\LineaDto.cs" />
     <Compile Include="DTOs\Mobile\PipaDto.cs" />
+    <Compile Include="DTOs\Mobile\PuntoVenta\PuntoVentaAsignadoDTO.cs" />
     <Compile Include="DTOs\Mobile\TraspasoDto.cs" />
     <Compile Include="DTOs\Requisicion\RequisicionSalidaDTO.cs" />
     <Compile Include="DTOs\Ventas\CajaGeneralDTO.cs" />
