--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -149,6 +149,7 @@
     <add key="PutAutorizarProductoOordenCompra" value="api/compras/actualiza/productos/ordencompra" />
     <add key="PutSolicitarPago" value="api/compras/solictud/pago/mercancia" />
     <add key="PutSolicitarPagoPorteador" value="api/compras/solictud/pago/porteador" />
+    <add key="PutSolicitarPagoExpedidor" value="api/compras/solictud/pago/expedidor" />
     <add key="PutGuardarDatosPapeleta" value="api/compras/guardar/datos/papeleta" />
     <add key="PutDatosOrdenCompraExpedidor" value="api/compras/actualiza/ordencompra/datosexpedidor" />
     <!--Compras-->
