JOTM-11/12/2018-Agrega servicio consulta usuarios
Agrega servicio de consulta de usuarios para cortes

--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -70,6 +70,7 @@
     <Compile Include="AdaptadoresDTO\Mobile\AlmacenTraspasoAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Mobile\AnticiposCortesAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Mobile\CalibracionAdapter.cs" />
+    <Compile Include="AdaptadoresDTO\Mobile\Cortes\UsuariosCorteAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Mobile\TraspasoAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Mobile\VentasEstacionesAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Ventas\CajaGeneralAdapter.cs" />
@@ -107,6 +108,8 @@
     <Compile Include="DTOs\Mobile\CamionetaDto.cs" />
     <Compile Include="DTOs\Mobile\CategoriaDto.cs" />
     <Compile Include="DTOs\Mobile\CorteDto.cs" />
+    <Compile Include="DTOs\Mobile\Cortes\UsuarioDTO.cs" />
+    <Compile Include="DTOs\Mobile\Cortes\UsuariosCorteDTO.cs" />
     <Compile Include="DTOs\Mobile\Cortes\VentasCorteDTO.cs" />
     <Compile Include="DTOs\Mobile\DatosAnticiposCorteDto.cs" />
     <Compile Include="DTOs\Mobile\DatosAutoconsumoDto.cs" />
