--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -172,6 +172,14 @@
     <add key="PutListaMovGas" value="api/ventas/buscar/listamovimientosgas" />
     <add key="PutListaMovGasCilindros" value="api/ventas/buscar/listamovimientosgascilindros" />
     <!-- Ventas -->
+    <!-- Pedidos -->
+    <add key="GetListaPedidos" value="api/pedidos/buscar/listapedidos" />
+    <add key="GetEstatusPedido" value="api/pedidos/buscar/listaestatuspedidos" />
+    <add key="GetPedidoId" value="api/pedidos/buscar/pedidos/" />
+    <add key="PutModificarPedido" value="api/pedidos/modificar/pedido"/>
+    <add key="PostRegistrarPedido" value="api/pedidos/registrar/pedido"/>
+    <add key="PutCancelarPedido" value="api/pedidos/cancelar/pedido"/>    
+    <!-- Pedidos -->
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
   <system.web>
