JSA - Ingreso gasto avance

--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -144,6 +144,8 @@
     <Compile Include="Servicios\AccesoADatos\AlmacenEntradaProductoDataAccess.cs" />
     <Compile Include="Servicios\AccesoADatos\AlmacenSalidaProductoDataAccess.cs" />
     <Compile Include="Servicios\AccesoADatos\CajaGeneralDataAccess.cs" />
+    <Compile Include="Servicios\AccesoADatos\EgresoDataAccess.cs" />
+    <Compile Include="Servicios\AccesoADatos\IngresoDataAccess.cs" />
     <Compile Include="Servicios\AccesoADatos\OrdenCompraProductoDataAccess.cs" />
     <Compile Include="Servicios\AccesoADatos\PedidosDataAccess.cs" />
     <Compile Include="Servicios\Almacen\RemanenteServicio.cs" />
@@ -245,6 +247,8 @@
     <Compile Include="Servicios\Almacen\CalcularAlmacenServicio.cs" />
     <Compile Include="DTOs\Mobile\TipoPersonaDto.cs" />
     <Compile Include="DTOs\Mobile\TipoRegimenFiscalDto.cs" />
+    <Compile Include="Servicios\IngresoGasto\EgresoServicio.cs" />
+    <Compile Include="Servicios\IngresoGasto\IngresoServicio.cs" />
     <Compile Include="Servicios\Mobile\AutoconsumoServicio.cs" />
     <Compile Include="Servicios\Mobile\CalibracionServicio.cs" />
     <Compile Include="Servicios\Mobile\ClientesServicio.cs" />
@@ -378,7 +382,9 @@
     <Compile Include="UnitOfWork\IGenericUnitOfWork.cs" />
     <Compile Include="UnitOfWork\SagasDataUow.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="DTOs\IngresoGasto\" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\1.1Presentation\1.1.1Web\MVC.Presentacion\MVC.Presentacion.csproj">
       <Project>{1751630E-103C-41AD-A84C-DAE1B576F0A5}</Project>
