JOTM-20/12/2018-Agrega cargo y actualiza limite de credito
* Agrega metodo para registra venta extraordinaria 
* Inicia metodo para actualizar el credito disponible

--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -73,6 +73,7 @@
     <Compile Include="AdaptadoresDTO\Mobile\CalibracionAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Mobile\Cortes\UsuariosCorteAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Mobile\TraspasoAdapter.cs" />
+    <Compile Include="AdaptadoresDTO\Mobile\VentaExtraordinaria\CargoAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Mobile\VentasEstacionesAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Pedidos\PedidosAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Ventas\CajaGeneralAdapter.cs" />
