--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
@@ -13,6 +13,7 @@
     <!--Jimmy-->
     <!--<add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=NEOTECK014F-PC;initial catalog=Sagas.MainModule;Integrated Security=SSPI;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.12;initial catalog=Sagas.MainModule;user id=sa;password=Nts.682;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ConnectionString" connectionString="data source=192.168.0.12;initial catalog=Sagas.MainModule;user id=sa;password=Nts.682;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework" />
   </connectionStrings>
   <appSettings>
     <!--URL del WebApp-->
