CJAL-21/12/2018- Pedidos-alta clientes

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -11549,6 +11549,7 @@
     <Content Include="Views\Pedidos\_TipoUnidad.cshtml" />
     <Content Include="Views\Pedidos\_Camionetas.cshtml" />
     <Content Include="Views\Pedidos\_Pipas.cshtml" />
+    <Content Include="Views\Pedidos\AltaClienteDireccion.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
