--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -178,6 +178,7 @@
     <add key="GetPedidoId" value="api/pedidos/buscar/pedidos/" />
     <add key="PutModificarPedido" value="api/pedidos/modificar/pedido"/>
     <add key="PostRegistrarPedido" value="api/pedidos/registrar/pedido"/>
+    <add key="PostRegistrarEncuesta" value="api/pedidos/registrar/encuesta"/>
     <add key="PutCancelarPedido" value="api/pedidos/cancelar/pedido"/>
     <add key="GetCamionetas" value="api/pedidos/buscar/camionetas/" />
     <add key="GetPipas" value="api/pedidos/buscar/pipas/" />
