CJAL-Avance encuestas

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Web.config
@@ -23,6 +23,9 @@
       </namespaces>
     </pages>
   </system.web.webPages.razor>
+  <devExpress>
+    <themes enableThemesAssembly="true" styleSheetTheme="" theme="Moderno" /> 
+  </devExpress>
   <appSettings>
     <add key="webpages:Enabled" value="false" />
   </appSettings>
