--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -131,6 +131,7 @@
     <Compile Include="DTOs\Mobile\PuntoVenta\DatosVentaExtraforaneaDTO.cs" />
     <Compile Include="DTOs\Mobile\PuntoVenta\PuntoVentaAsignadoDTO.cs" />
     <Compile Include="DTOs\Mobile\TraspasoDto.cs" />
+    <Compile Include="DTOs\Pedidos\EncuestaDto.cs" />
     <Compile Include="DTOs\Pedidos\EstatusPedidoDto.cs" />
     <Compile Include="DTOs\Pedidos\PedidoDetalleDto.cs" />
     <Compile Include="DTOs\Pedidos\PedidoModelDto.cs" />
